tests/cases/traits/errors/duplicate-trait-impl.ari
struct Bag {
}

impl Iterable[i64] for Bag {
}

impl Iterable[i64] for Bag {
}

fn main() -> i64 {
  return 0;
}
